revert to clean state
